redo portfolio website

--- a/AioPortfolio2.html
+++ b/AioPortfolio2.html
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    <a class="navbar-brand left-line-out" href="#" style="color:black">Omar Baig</a>
+                    <a class="navbar-brand left-line-out" href="#" style="color:white">AIO</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="NavigationBar">
-                    <div class="nav-links left-line-out">About</div>
-                    <div class="nav-links left-line-out">Services</div>
-                    <div class="nav-links left-line-out">Pricing</div>
-                    <div class="nav-links left-line-out">Contact</div>
+                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> About</a></li>
+                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> Services</a></li>
+                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> Pricing</a></li>
+                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,6 +40,17 @@
 
     <!-- SERVICES CONTENT -->
     <div class="section-1">
+        <div class="main-page">
+            <div class="main-title">AIO.</div>
+            <div class="main-sub">
+                <span>Website Building Solutions.</span>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="white-divider"></div>
+    <div class="section-2">
 
     </div>
 </body>
