--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -57,32 +57,92 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading-text">Services</h2>
+                        <hr class="line">
                         <h4 class="section-sub-heading">Here are some of our services that we offer.</h4>
                     </div>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span><i class="fas fa-mobile-alt"></i></span>
-                        <h4>Responsive Web Design</h4>
-                        <p>Website will work on any device no matter which screen user is on.</p>
+                        <h4 class="work-title">Responsive Web Design</h4>
+                        <p class="work-sub">Website will work on any device no matter which screen user is on.</p>
                     </div>
                     <div class="col-md-4">
                         <span><i class="far fa-envelope"></i></span>
-                        <h4>Quality Service</h4>
-                        <p>We will assure you the best possible service because you da best.</p>
+                        <h4 class="work-title">Quality Service</h4>
+                        <p class="work-sub">We will assure you the best possible service because you da best.</p>
                     </div>
                     <div class="col-md-4">
                         <span><i class="fas fa-lock"></i></span>
-                        <h4>Website Security</h4>
-                        <p>Prevent website from going down. 24/7 uptime with the best hosts avaiable.</p>
+                        <h4 class="work-title">Website Security</h4>
+                        <p class="work-sub">Prevent website from going down. 24/7 uptime with the best hosts avaiable.</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading-text">Works</h2>
+                    <hr class="line">
+                    <h4 class="section-sub-heading">Some of our work.</h4>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <img src="cat1.jpg" class="work-image">
+                    <div class="works-caption text-center">
+                        <h4 class="work-title">Example</h4>
+                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <img src="cat7.jpg" class="work-image">
+                    <div class="works-caption text-center">
+                        <h4 class="work-title">Example</h4>
+                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <img src="cat3.jpg" class="work-image">
+                    <div class="works-caption text-center">
+                        <h4 class="work-title">Example</h4>
+                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <img src="cat4.jpg" class="work-image">
+                    <div class="works-caption text-center">
+                        <h4 class="work-title">Example</h4>
+                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <img src="cat5.jpg" class="work-image">
+                    <div class="works-caption text-center">
+                        <h4 class="work-title">Example</h4>
+                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <img src="cat6.jpg" class="work-image">
+                    <div class="works-caption text-center">
+                        <h4 class="work-title">Example</h4>
+                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    </div>
+                </div>
+
+
+            </div>
 
         </div>
 
     </section>
+
     <script>
         function myMap() {
             var myCenter = new google.maps.LatLng(42.3526896, -83.1694164);
