--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Omar Baig's Porfolio</title>
+    <title>Welcome To AIO</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -83,64 +83,117 @@
     </section>
 
     <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading-text">Works</h2>
-                    <hr class="line">
-                    <h4 class="section-sub-heading">Some of our work.</h4>
-                </div>
+        <div class="works">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="content-container">
+                            <h2 class="section-heading-text">Works</h2>
+                            <hr class="line">
+                            <h4 class="section-sub-heading">Some of our work.</h4>
+                        </div>
+                    </div>
 
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <img src="cat1.jpg" class="work-image">
-                    <div class="works-caption text-center">
-                        <h4 class="work-title">Example</h4>
-                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
-                    </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <img src="cat7.jpg" class="work-image">
-                    <div class="works-caption text-center">
-                        <h4 class="work-title">Example</h4>
-                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="content-container">
+                            <img src="cat1.jpg" class="work-image">
+                            <div class="works-caption text-center">
+                                <h4 class="work-title">Example</h4>
+                                <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <img src="cat3.jpg" class="work-image">
-                    <div class="works-caption text-center">
-                        <h4 class="work-title">Example</h4>
-                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="content-container">
+                            <img src="cat7.jpg" class="work-image">
+                            <div class="works-caption text-center">
+                                <h4 class="work-title">Example</h4>
+                                <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <img src="cat4.jpg" class="work-image">
-                    <div class="works-caption text-center">
-                        <h4 class="work-title">Example</h4>
-                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="content-container">
+                            <img src="cat3.jpg" class="work-image">
+                            <div class="works-caption text-center">
+                                <h4 class="work-title">Example</h4>
+                                <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <img src="cat5.jpg" class="work-image">
-                    <div class="works-caption text-center">
-                        <h4 class="work-title">Example</h4>
-                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="content-container">
+                            <img src="cat4.jpg" class="work-image">
+                            <div class="works-caption text-center">
+                                <h4 class="work-title">Example</h4>
+                                <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <img src="cat6.jpg" class="work-image">
-                    <div class="works-caption text-center">
-                        <h4 class="work-title">Example</h4>
-                        <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="content-container">
+                            <img src="cat5.jpg" class="work-image">
+                            <div class="works-caption text-center">
+                                <h4 class="work-title">Example</h4>
+                                <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="content-container">
+                            <img src="cat6.jpg" class="work-image">
+                            <div class="works-caption text-center">
+                                <h4 class="work-title">Example</h4>
+                                <h6 class="work-sub">Lorem Ipsum Dolor</h6>
+                            </div>
+                        </div>
+                    </div>
 
-
+                </div>
             </div>
 
         </div>
 
+    </section>
+    <section>
+        <div class="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="content-container">
+                            <h2 class="section-heading-text">The Team</h2>
+                            <hr class="line">
+                            <h4 class="section-sub-heading">The people behind it all.</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <div class="content-container">
+                            <img src="lambo.jpg" class="work-image">
+                            <h4 class="work-title">Ahmed</h4>
+                            <p class="work-sub">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content-container">
+                            <img src="audi.jpg" class="work-image">
+                            <h4 class="work-title">Ibrahim</h4>
+                            <p class="work-sub">CFO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content-container">
+                            <img src="gtr.jpg" class="work-image">
+                            <h4 class="work-title">Omar</h4>
+                            <p class="work-sub">Controller</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script>
