--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -48,7 +48,45 @@
         </div>
     </header>
 
+    <!-- About -->
+    <section>
+        <div class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading-text">About</h2>
+                        <hr class="line">
+                        <h4 class="section-sub-heading">Let us tell you a little about ourselves.</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <div class="about-words">
+                            Lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum.<br> <br>Dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor.<br><br> Meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta lorem ipsum dolor meta
+                        </div>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <div>
+                            <img src="NYC.jpg" class="about-picture">
+                        </div>
+                    </div>
+                </div>
 
+
+
+
+            </div>
+
+
+
+
+
+        </div>
+
+
+
+
+    </section>
 
     <!-- Services -->
     <section>
@@ -173,14 +211,14 @@
                     <div class="col-md-4">
                         <div class="content-container">
                             <img src="lambo.jpg" class="work-image">
-                            <h4 class="work-title">Ahmed</h4>
+                            <h4 class="work-title">Omar</h4>
                             <p class="work-sub">CEO</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="content-container">
                             <img src="audi.jpg" class="work-image">
-                            <h4 class="work-title">Ibrahim</h4>
+                            <h4 class="work-title">Omar</h4>
                             <p class="work-sub">CFO</p>
                         </div>
                     </div>
