--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -54,9 +54,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading-text">About</h2>
-                        <hr class="line">
-                        <h4 class="section-sub-heading">Let us tell you a little about ourselves.</h4>
+                        <div class="content-container">
+                            <h2 class="section-heading-text">About</h2>
+                            <hr class="line">
+                            <h4 class="section-sub-heading">Let us tell you a little about ourselves.</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -94,26 +96,34 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading-text">Services</h2>
-                        <hr class="line">
-                        <h4 class="section-sub-heading">Here are some of our services that we offer.</h4>
+                        <div class="content-container">
+                            <h2 class="section-heading-text">Services</h2>
+                            <hr class="line">
+                            <h4 class="section-sub-heading">Here are some of our services that we offer.</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <span><i class="fas fa-mobile-alt"></i></span>
-                        <h4 class="work-title">Responsive Web Design</h4>
-                        <p class="work-sub">Website will work on any device no matter which screen user is on.</p>
+                        <div class="content-container-2">
+                            <span><i class="fas fa-mobile-alt"></i></span>
+                            <h4 class="work-title">Responsive Web Design</h4>
+                            <p class="work-sub">Website will work on any device no matter which screen user is on.</p>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <span><i class="far fa-envelope"></i></span>
-                        <h4 class="work-title">Quality Service</h4>
-                        <p class="work-sub">We will assure you the best possible service because you da best.</p>
+                        <div class="content-container-2">
+                            <span><i class="far fa-envelope"></i></span>
+                            <h4 class="work-title">Quality Service</h4>
+                            <p class="work-sub">We will assure you the best possible service because you da best.</p>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <span><i class="fas fa-lock"></i></span>
-                        <h4 class="work-title">Website Security</h4>
-                        <p class="work-sub">Prevent website from going down. 24/7 uptime with the best hosts avaiable.</p>
+                        <div class="content-container-2">
+                            <span><i class="fas fa-lock"></i></span>
+                            <h4 class="work-title">Website Security</h4>
+                            <p class="work-sub">Prevent website from going down. 24/7 uptime with the best hosts.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -135,7 +145,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="cat1.jpg" class="work-image">
                             <div class="works-caption text-center">
                                 <h4 class="work-title">Example</h4>
@@ -144,7 +154,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="cat7.jpg" class="work-image">
                             <div class="works-caption text-center">
                                 <h4 class="work-title">Example</h4>
@@ -153,7 +163,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="cat3.jpg" class="work-image">
                             <div class="works-caption text-center">
                                 <h4 class="work-title">Example</h4>
@@ -162,7 +172,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="cat4.jpg" class="work-image">
                             <div class="works-caption text-center">
                                 <h4 class="work-title">Example</h4>
@@ -171,7 +181,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="cat5.jpg" class="work-image">
                             <div class="works-caption text-center">
                                 <h4 class="work-title">Example</h4>
@@ -180,7 +190,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="cat6.jpg" class="work-image">
                             <div class="works-caption text-center">
                                 <h4 class="work-title">Example</h4>
@@ -196,7 +206,7 @@
 
     </section>
     <section>
-        <div class="services">
+        <div class="team">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -209,21 +219,21 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="lambo.jpg" class="work-image">
                             <h4 class="work-title">Omar</h4>
                             <p class="work-sub">CEO</p>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="audi.jpg" class="work-image">
                             <h4 class="work-title">Omar</h4>
                             <p class="work-sub">CFO</p>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content-container">
+                        <div class="content-container-2">
                             <img src="gtr.jpg" class="work-image">
                             <h4 class="work-title">Omar</h4>
                             <p class="work-sub">Controller</p>
@@ -232,6 +242,94 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section>
+
+        <div class="pricing">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="content-container">
+                            <h2 class="section-heading-text">Pricing</h2>
+                            <hr class="line">
+                            <h4 class="section-sub-heading">Pricing Packages</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <div class="content-container-2">
+                            <div class="pricing-box">
+                                <div class="row">
+                                    <div class="pricing-box-title">$500</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Lorem</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Ipsum</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Dolor</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info buyNow">Buy Now</div>
+                                </div>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content-container-2">
+                            <div class="pricing-box">
+                                <div class="row">
+                                    <div class="pricing-box-title">$1000</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Lorem</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Ipsum</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Dolor</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info buyNow">Buy Now</div>
+                                </div>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content-container-2">
+                            <div class="pricing-box">
+                                <div class="row">
+                                    <div class="pricing-box-title">$1500</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Lorem</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Ipsum</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info">Dolor</div>
+                                </div>
+                                <div class="row">
+                                    <div class="pricing-info buyNow">Buy Now</div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <script>
