--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -221,14 +221,14 @@
                     <div class="col-md-4">
                         <div class="content-container-2">
                             <img src="lambo.jpg" class="work-image">
-                            <h4 class="work-title">Omar</h4>
+                            <h4 class="work-title">Ali</h4>
                             <p class="work-sub">CEO</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="content-container-2">
                             <img src="audi.jpg" class="work-image">
-                            <h4 class="work-title">Omar</h4>
+                            <h4 class="work-title">Ibrahim</h4>
                             <p class="work-sub">CFO</p>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <div class="content-container-2">
+                        <div class="content-container-3">
                             <div class="pricing-box">
                                 <div class="row">
                                     <div class="pricing-box-title">$500</div>
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content-container-2">
+                        <div class="content-container-3">
                             <div class="pricing-box">
                                 <div class="row">
                                     <div class="pricing-box-title">$1000</div>
@@ -307,7 +307,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content-container-2">
+                        <div class="content-container-3">
                             <div class="pricing-box">
                                 <div class="row">
                                     <div class="pricing-box-title">$1500</div>
@@ -330,7 +330,19 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
+
+    <!-- Map Section -->
+    <section>
+
+        <div class="map-container">
+            <div id="map"></div>
+        </div>
+
+    </section>
+
+
 
     <script>
         function myMap() {
