--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -336,12 +336,21 @@
     <!-- Map Section -->
     <section>
 
-        <div class="map-container">
+        <div class=" container map-container">
             <div id="map"></div>
         </div>
 
     </section>
 
+    <footer>
+        <div class="container-fluid footer">
+            <div class="container footer-text text-center">
+                <h5>Made by: Omar Baig</h5>
+                <p style="font-size:10px">With care</p>
+            </div>
+
+        </div>
+    </footer>
 
 
     <script>
