--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -26,9 +26,9 @@
                     <a class="navbar-brand left-line-out" href="#" style="color:#000000">AIO</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="NavigationBar">
-                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> About</a></li>
-                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> Works</a></li>
-                    <li class="nav-links"><a href="#" class="left-line-out"><span></span> Contact</a></li>
+                    <li><a href="#" class="left-line-out"><span class="nav-link-color">About</span></a></li>
+                    <li><a href="#" class="left-line-out"><span class="nav-link-color">Works</span></a></li>
+                    <li><a href="#" class="left-line-out"><span class="nav-link-color">Contact</span></a></li>
                 </ul>
             </div>
         </nav>
@@ -108,7 +108,7 @@
                         <div class="content-container-2">
                             <span><i class="fas fa-mobile-alt"></i></span>
                             <h4 class="work-title">Responsive Web Design</h4>
-                            <p class="work-sub">Website will work on any device no matter which screen user is on.</p>
+                            <p class="work-sub">Website will work on any screen no matter which device user is on.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
