--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -27,7 +27,10 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="NavigationBar">
                     <li><a href="#" class="left-line-out"><span class="nav-link-color">About</span></a></li>
+                    <li><a href="#" class="left-line-out"><span class="nav-link-color">Services</span></a></li>
                     <li><a href="#" class="left-line-out"><span class="nav-link-color">Works</span></a></li>
+                    <li><a href="#" class="left-line-out"><span class="nav-link-color">Team</span></a></li>
+                    <li><a href="#" class="left-line-out"><span class="nav-link-color">Pricing</span></a></li>
                     <li><a href="#" class="left-line-out"><span class="nav-link-color">Contact</span></a></li>
                 </ul>
             </div>
