--- a/AIOwebsite.html
+++ b/AIOwebsite.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <section>
         <nav class="navbar navbar-default always-open navbar-fixed-top">
             <div class="container">
@@ -76,21 +75,8 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
             </div>
-
-
-
-
-
         </div>
-
-
-
-
     </section>
 
     <!-- Services -->
@@ -224,14 +210,14 @@
                     <div class="col-md-4">
                         <div class="content-container-2">
                             <img src="lambo.jpg" class="work-image">
-                            <h4 class="work-title">Ali</h4>
+                            <h4 class="work-title">Omar</h4>
                             <p class="work-sub">CEO</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="content-container-2">
                             <img src="audi.jpg" class="work-image">
-                            <h4 class="work-title">Ibrahim</h4>
+                            <h4 class="work-title">Omar</h4>
                             <p class="work-sub">CFO</p>
                         </div>
                     </div>
@@ -247,94 +233,7 @@
         </div>
     </section>
 
-    <section>
-
-        <div class="pricing">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <div class="content-container">
-                            <h2 class="section-heading-text">Pricing</h2>
-                            <hr class="line">
-                            <h4 class="section-sub-heading">Pricing Packages</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <div class="content-container-3">
-                            <div class="pricing-box">
-                                <div class="row">
-                                    <div class="pricing-box-title">$500</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Lorem</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Ipsum</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Dolor</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info buyNow">Buy Now</div>
-                                </div>
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="content-container-3">
-                            <div class="pricing-box">
-                                <div class="row">
-                                    <div class="pricing-box-title">$1000</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Lorem</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Ipsum</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Dolor</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info buyNow">Buy Now</div>
-                                </div>
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="content-container-3">
-                            <div class="pricing-box">
-                                <div class="row">
-                                    <div class="pricing-box-title">$1500</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Lorem</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Ipsum</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info">Dolor</div>
-                                </div>
-                                <div class="row">
-                                    <div class="pricing-info buyNow">Buy Now</div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="element"></div>
 
     <!-- Map Section -->
     <section>
@@ -349,7 +248,6 @@
         <div class="container-fluid footer">
             <div class="container footer-text text-center">
                 <h5>Made by: Omar Baig</h5>
-                <p style="font-size:10px">With care</p>
             </div>
 
         </div>
